--- a/style.css
+++ b/style.css
@@ -11,13 +11,6 @@ div {
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-.paragraph2 {
-  color: black;
-  background-color: #D3D3D3;
-  margin-bottom: 100px;
-  font-size: 1.6vw;
-}
-
 h1 {
   color: black;
   text-align: center;
@@ -28,15 +21,15 @@ h1 {
 ul {
   list-style-type: none;
   margin: 10px;
-  padding: 0;
+  padding: 5px;
   overflow: hidden;
   background-color: #D3D3D3;
-  border: 1px white;
+  border: 2px white;
   font-size: 2vw;
 }
 
 li {
-  float: left;
+  float: center;
   border-right: 1.5px solid #bbb;
 }
 
@@ -44,7 +37,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 16px;
   text-decoration: none;
 }
 
@@ -69,8 +62,24 @@ footer {
 }
 
 .image1 {
-  background-size: 100% 100%;
+  background-size:75% 75%;
   border: 2px solid black;
-  margin-bottom: 20px;
-  margin-left: 1150px;
+
 }
+
+.button {
+  background-color: #ff6347;
+  border: none;
+  color: white;
+  padding: 15px 25px;
+  text-align: right;
+  font-size: 16px;
+  cursor: pointer;
+  margin-left: 100px;
+
+}
+
+.button:hover {
+  background-color: red;
+
+  .fo
